@@ -10108,3 +10108,7 @@ Video Disk Recorder Revision History
   + Subtitles now disappear as signaled in the data stream.
   + Subtitles are now kept in memory for at least 120 seconds, to have them readily
     available after a short rewind during replay.
+- Subtitles can now be temporarily displayed after a fast rewind:
+  + The setup option "DVB/Display subtitles" now has three settings: "no" and "always"
+    behave like before, the new "after rewind" turns on subtitles after a fast rewind
+    during replay, and off again when the point where the rewind was started is reached.
